--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -23,6 +23,10 @@ root {
     pointer-events: none;
 }
 
+#Controls_Facts_Table {
+    
+}
+
 #Controls_Rules_List {
     list-style-type: none;
     height: auto;
@@ -46,6 +50,14 @@ root {
     text-align: center;
     font-size: 35px;
     background-color: rgba(255,32,32,0.7);
+}
+
+.fact {
+    width: 100px;
+    height: 75px;
+    text-align: center;
+    font-size: 35px;
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 .boxed {
