Misc changes to the drag/drop functionality, added a few TODO stubs, added a css class for making things glow (might be useful).

--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -68,6 +68,10 @@ root {
     border-radius: 5px;
 }
 
+.glowing {
+    box-shadow: 0px 0px 25px #FFD700;
+}
+
 .last-item {
     border-right: none !important;
 }
