--- a/ProoferLogicEngine/public_html/css/positions.css
+++ b/ProoferLogicEngine/public_html/css/positions.css
@@ -38,13 +38,19 @@
     position: fixed;
 }
 
+#Controls_Executor_Evaluate {
+    top: 440px;
+    left: 610px;
+    position: fixed;
+}
+
 #Controls_Facts {
     width: 224px;
     height: 650px;
     position: fixed;
     top: 0px;
     left: 800px;
-    
+
     border-left: black solid 2px;
     background: -webkit-linear-gradient(#A2A2A2, #A0A0A0);
 }
@@ -55,7 +61,7 @@
     position: fixed;
     top: 650px;
     left: 0px;
-    
+
     border-top: black solid 2px;
     background: -webkit-linear-gradient(#000000, #A0A0A0);
 }
