--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -69,14 +69,18 @@ root {
 }
 
 .glowing {
-    box-shadow: 0px 0px 25px #FFD700;
+    box-shadow: 0px 0px 35px #FFD700;
+}
+
+.hover-glowing {
+    box-shadow: 0px 0px 20px #20FF20;
 }
 
 .last-item {
     border-right: none !important;
 }
 
-.executor-input-box {
+.executor-box {
     width: 100px;
     height: 75px;
     background-color: rgba(128,128,128,0.3);
