--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -50,7 +50,7 @@ root {
 }
 
 #Controls_Display {
-    position:  absolute;
+    position:  fixed;
     font-size: 20px;
     left: 0px;
     top: 25px;
