Added some transitions to the glowing classes, create a FactCreationDialog stub, added check for Add rule so ellipse is displayed and click event is bound (no logic yet for the click event), did a bit more work with the AddTable.

--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -116,10 +116,12 @@ root {
 }
 .glowing {
     box-shadow: 0px 0px 35px #FFD700;
+    transition: all .5s linear;
 }
 
 .hover-glowing {
     box-shadow: 0px 0px 20px #20FF20;
+    transition: all .5s linear;
 }
 
 .last-item {
