--- a/ProoferLogicEngine/public_html/css/fact_creation.css
+++ b/ProoferLogicEngine/public_html/css/fact_creation.css
@@ -25,6 +25,18 @@
     width: auto;
 }
 
+#Dialogs_FactCreation_Creation {
+    width: 300px;
+    height: 100px;
+    background-color: #FFCFCF;
+    border-radius: 10px;
+    vertical-align: middle;
+}
+
+#Dialogs_FactCreation_Creation_Input {
+    width: 1em;
+}
+
 #Dialogs_FactCreation_OpList {
     list-style-type: none;
     white-space: nowrap;
@@ -35,6 +47,10 @@
     display: inline;
     padding-right: 15px;
     float: left;
+}
+
+.selected {
+    background-color: #FFD700 !important;
 }
 
 .operator {
@@ -50,4 +66,12 @@
     display: inline-block;
     vertical-align: middle;
     line-height: normal;
+}
+
+.creation-element {
+    background-color: #FFDFDF;
+    width: 30px;
+    height: 30px;
+    font-size: 14pt;
+    border-radius: 5px;
 }
