--- a/ProoferLogicEngine/public_html/css/fact_creation.css
+++ b/ProoferLogicEngine/public_html/css/fact_creation.css
@@ -28,7 +28,7 @@
 #Dialogs_FactCreation_Creation {
     width: 300px;
     height: 100px;
-    background-color: #FFCFCF;
+    background-color: #FFDFDF;
     border-radius: 10px;
     vertical-align: middle;
     padding-left: 15px;
@@ -82,12 +82,11 @@
 }
 
 .creation-element {
-    background-color: #FFEFEF;
+    background-color: #FFCFCF;
     width: 30px;
     height: 30px;
     font-size: 14pt;
     border-radius: 5px;
-    font-family: monospace;
 }
 
 .creation-operator {
@@ -95,5 +94,22 @@
     width: 30px;
     height: 30px;
     font-size: 14pt;
+    border-radius: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.gray {
+    background-color: #DFDFFF;
+    border-radius: 5px;
+}
+
+.red {
+    background-color: #FFCFCF;
+    border-radius: 5px;
+}
+
+.green {
+    background-color: #DFFFDF;
     border-radius: 5px;
 }
