Added ability to make groups.  Next is clearing, but something tells me that will end up being fucking stupid.  Actually fuck it, instead of the ability to remove little things, how about just this big ass clear button.

--- a/ProoferLogicEngine/public_html/css/fact_creation.css
+++ b/ProoferLogicEngine/public_html/css/fact_creation.css
@@ -99,6 +99,12 @@
     margin-right: 10px;
 }
 
+.paren {
+    background-color: #DFDFFF;
+    font-size: 14pt;
+    border-radius: 5px;
+}
+
 .gray {
     background-color: #DFDFFF;
     border-radius: 5px;
