Negations for creation-elements, started on negations for creation-operators

--- a/ProoferLogicEngine/public_html/css/fact_creation.css
+++ b/ProoferLogicEngine/public_html/css/fact_creation.css
@@ -105,6 +105,11 @@
     border-radius: 5px;
 }
 
+.negation {
+    padding-right: 2px;
+    padding-left: 2px;
+}
+
 .gray {
     background-color: #DFDFFF;
     border-radius: 5px;
