--- a/ProoferLogicEngine/public_html/css/fact_creation.css
+++ b/ProoferLogicEngine/public_html/css/fact_creation.css
@@ -11,6 +11,10 @@
     border-radius: 10px;
 }
 
+#Controls_AddTable td {
+    margin-left: 5px;
+    margin-right: 5px;
+}
 
 #Controls_AddTable_Banner {
     background-color: rgb(240, 225, 225);
@@ -22,7 +26,7 @@
 }
 
 .select-fact {
-    
+    font-size: 14pt;
 }
 
 #Dialogs_FactCreation {
