--- a/ProoferLogicEngine/public_html/css/fact_creation.css
+++ b/ProoferLogicEngine/public_html/css/fact_creation.css
@@ -11,6 +11,10 @@
     border-radius: 10px;
 }
 
+#Controls_AddTable table {
+    min-width: 200px;
+}
+
 #Controls_AddTable td {
     margin-left: 5px;
     margin-right: 5px;
@@ -135,5 +139,4 @@
 
 .error-message {
     padding: 5px;
-    margin-top: 15px;
 }
