Fixed bug where elements werent selectable when editing an existing fact. added better and more consistent error checking.

--- a/ProoferLogicEngine/public_html/css/fact_creation.css
+++ b/ProoferLogicEngine/public_html/css/fact_creation.css
@@ -45,6 +45,7 @@
     vertical-align: middle;
     padding-left: 15px;
     padding-top: 15px;
+    margin-bottom: 10px;
 }
 
 #Dialogs_FactCreation_OpList {
