Added pagination, comments, and a shit ton of todos

--- a/ProoferLogicEngine/public_html/css/level_selection.css
+++ b/ProoferLogicEngine/public_html/css/level_selection.css
@@ -17,6 +17,10 @@
     min-width: 160px;
 }
 
+#PickLevel_PageControls {
+    
+}
+
 .select-level {
     text-align: center;
     background-color: rgba(192, 25, 25, 0.8);
