--- a/ProoferLogicEngine/public_html/css/level_selection.css
+++ b/ProoferLogicEngine/public_html/css/level_selection.css
@@ -10,15 +10,21 @@
 
 #PickLevel_LevelContainer_List li {
     display: inline;
-    margin-left: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
     margin-bottom: 30px;
     float: left;
-    min-height: 160px;
+    min-height: 162px;
     min-width: 160px;
 }
 
+#PickLevel_MoreInfoContainer {
+    clear: both;
+    min-height: 100px;
+}
+
 #PickLevel_PageControls {
-    
+    clear: both;
 }
 
 .select-level {
@@ -33,5 +39,7 @@
 
 .level-details {
     text-align: left;
-    padding-left: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 10px;
 }
