Additional details for a level are now shown.. sort of. The values are hardcoded but the display logic is there.

--- a/ProoferLogicEngine/public_html/css/level_selection.css
+++ b/ProoferLogicEngine/public_html/css/level_selection.css
@@ -43,3 +43,16 @@
     padding-right: 5px;
     padding-bottom: 10px;
 }
+
+.level-info-heading {
+    font-weight: bold;
+    font-size: 28pt;
+}
+
+.level-info-value {
+    font-size: 24pt;
+}
+
+.level-info-piece {
+    margin-right: 100px;
+}
