Modified the logic for creating and saving games so it is a little less stupid.

--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -16,6 +16,10 @@ root {
     list-style-type: none;
 }
 
+#MainMenuOptions li {
+    margin-bottom: 10px;
+}
+
 #MainGameCanvas {
     position: fixed;
     top: 0px;
