--- a/ProoferLogicEngine/public_html/css/positions.css
+++ b/ProoferLogicEngine/public_html/css/positions.css
@@ -13,26 +13,26 @@
 }
 
 #Controls_Executor_Result {
-    top: 150px;
-    left: 450px;
+    top: 17%;
+    left: 44%;
     position: fixed;
 }
 
 #Controls_Executor_Arg0 {
-    top: 300px;
-    left: 300px;
+    top: 39%;
+    left: 30%;
     position: fixed;
 }
 
 #Controls_Executor_Arg1 {
-    top: 300px;
-    left: 600px;
+    top: 39%;
+    left: 59%;
     position: fixed;
 }
 
 #Controls_Executor_Rule {
-    top: 502px;
-    left: 450px;
+    top: 66%;
+    left: 44%;
     position: fixed;
 }
 
