--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -153,8 +153,8 @@ body {
 }
 
 .executor-box {
-    width: 100px;
-    height: 75px;
+    min-width: 100px;
+    min-height: 75px;
     background: rgba(128,128,128,0.3);
     border: 1px black solid;
     border-radius: 5px;
