Modified Rules and control to support displaying Rules by a given type. Also modified CSS so Executor and Modifier can be shown together. Modifier is for rules of replacement and will be located where the executor was, thus removing the need for a confined dialog box.

--- a/ProoferLogicEngine/public_html/css/positions.css
+++ b/ProoferLogicEngine/public_html/css/positions.css
@@ -6,7 +6,7 @@
         Define the layout and positions for specific control elements
 */
 
-#Controls_Executor {
+.executor-modifier-active {
     width: 75%;
     height: 80%;
     float: left;
