--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -91,9 +91,8 @@ body {
 }
 
 .rule {
-    width: 10.26vw;
-    /* non aspect-ratio preserved height is 10.24vh */
-    height: calc(10.26vw * 0.75);
+    width: 13vw;
+    height: 13vh;
     text-align: center;
     font-size: calc(10.24vh * 0.21 + 10px);
     background: 
@@ -167,8 +166,8 @@ body {
 }
 
 .executor-box {
-    min-width: 100px;
-    min-height: 75px;
+    min-width: 13vw;
+    min-height: 13vh;
     background: rgba(128,128,128,0.3);
     border: 1px black solid;
     border-radius: 5px;
