partial logic for highlighting section of fact that is hovered over

--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -186,6 +186,15 @@ body {
     margin-right: auto;
 }
 
+.replacement-control-hover {
+    /* TODO switch to be nicer color */
+    background-color: red;
+}
+
+.replacement-control-selected {
+    background-color: blue !important;
+}
+
 .tutorial-table table { 
     border-collapse: collapse; 
     text-align: left; 
