Made function to get Fact from HTML string (was logic located in FactCreationDialog) and added unit tests for it, moved additional prototypes to function so tests could use it, started on rule of replacement calculating, though still no display

--- a/ProoferLogicEngine/public_html/css/positions.css
+++ b/ProoferLogicEngine/public_html/css/positions.css
@@ -43,6 +43,15 @@
     position: fixed;
 }
 
+#Controls_Modifier_Results {
+    top: 30%;
+    position: fixed;
+    height: 10%;
+    width: 73%;
+    margin-left: 1%;
+    background: rgba(128,128,128,0.3);
+}
+
 #Controls_Modifier_SelectionArea {
     top: 45%;
     position: fixed;
