Fixed rule of replacement calculating, added test cases for the getFactFromHTML function, and implemented display of results. No events yet, and the CSS still looks bad, buts it's functional at least.

--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -195,6 +195,12 @@ body {
     background-color: blue !important;
 }
 
+.replacement-result {
+    margin: 1%;
+    width: auto;
+    padding: 0.5%;
+}
+
 .tutorial-table table { 
     border-collapse: collapse; 
     text-align: left; 
