Added temporary background image. Later to be replaced by an svg.

--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -178,7 +178,7 @@ body {
 }
 
 .machine-focused {
-    background-color: #ffffff;
+    background-image: url("../img/digital.png");
 }
 
 .center {
