Switched PauseMenu to not use the jquery dialog

--- a/ProoferLogicEngine/public_html/css/fact_creation.css
+++ b/ProoferLogicEngine/public_html/css/fact_creation.css
@@ -29,6 +29,10 @@
     background-color: rgb(230, 215, 215);
 }
 
+.add-fact {
+    /* This class is used as a control for adding a new Fact to AddTable */
+}
+
 .select-fact {
     font-size: 14pt;
 }
