--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -77,6 +77,21 @@ body {
     width: 33%;
 }
 
+#PauseMenu {
+    background-color: #FFFFFF !important;
+}
+
+#PauseMenu_Content {
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-left: 25%;
+    padding-right: 25%;
+}
+
+.grayed {
+    background-color: rgba(128, 128, 128, 0.3);
+}
+
 .fill {
     height: 100%;
     width: 100%;
