--- a/ProoferLogicEngine/public_html/css/positions.css
+++ b/ProoferLogicEngine/public_html/css/positions.css
@@ -77,17 +77,17 @@
 }
 
 #Controls_Modifier_Addit {
-    
+
 }
 
 #Controls_Facts {
     width: 25%;
     height: 80%;
     float: left;
-    
+
     overflow: auto;
 
-    background: -webkit-linear-gradient(#A2A2A2, #A0A0A0);
+    background: -webkit-linear-gradient(rgba(162,162,162,0.95), rgba(160,160,160,0.95));
     clear: right;
 }
 
@@ -95,34 +95,35 @@
     width: 100%;
     height: 20%;
     float: left;
-    
+
     overflow: auto;
 
-    background: -webkit-linear-gradient(#000000, #A0A0A0);
+    background: -webkit-linear-gradient(rgba( 0, 0, 0,0.95), rgba(160,160,160,0.95));
 }
 
 #PauseMenu {
     position: absolute;
-    top: 5%;
-    left: 5%;
-    height: 90%;
-    width: 90%;
+    top: 15%;
+    left: 15%;
+    height: 70%;
+    width: 70%;
+    z-index: 5;
 }
 
 ::-webkit-scrollbar {
-	width: 10px;
-	height: 10px;
+    width: 10px;
+    height: 10px;
 }
 ::-webkit-scrollbar-track {
-	background-color: rgba(113,112,107,0.1);
-	-webkit-border-radius: 5px;
+    background-color: rgba(113,112,107,0.1);
+    -webkit-border-radius: 5px;
 }
 ::-webkit-scrollbar-thumb:vertical,
 ::-webkit-scrollbar-thumb:horizontal {
-	background-color: rgba(192,0,0,0.8);
-	-webkit-border-radius: 6px;
+    background-color: rgba(192,0,0,0.8);
+    -webkit-border-radius: 6px;
 }
 ::-webkit-scrollbar-thumb:vertical:hover,
 ::-webkit-scrollbar-thumb:horizontal:hover {
-	background: rgba(160,0,0,0.9);
+    background: rgba(160,0,0,0.9);
 }
