Fixes for svg and some positions. soon going to refactor positions to fit 16:9. Not sure if or how to support both 16:9 and 4:3

--- a/ProoferLogicEngine/public_html/css/positions.css
+++ b/ProoferLogicEngine/public_html/css/positions.css
@@ -13,25 +13,25 @@
 }
 
 #Controls_Executor_Result {
-    top: 17%;
-    left: 44%;
+    top: 17vh;
+    left: 31vw;
     position: fixed;
 }
 
 #Controls_Executor_Arg0 {
-    top: 39%;
-    left: 30%;
+    top: 39vh;
+    left: 13vw;
     position: fixed;
 }
 
 #Controls_Executor_Arg1 {
-    top: 39%;
-    left: 59%;
+    top: 39vh;
+    left: 49vw;
     position: fixed;
 }
 
 #Controls_Executor_Rule {
-    top: 66%;
+    top: 66vh;
     left: 31vw;
     position: fixed;
     line-height: 200%;
