--- a/ProoferLogicEngine/public_html/css/main.css
+++ b/ProoferLogicEngine/public_html/css/main.css
@@ -92,6 +92,13 @@ body {
     background: rgba(128, 128, 128, 0.5);
 }
 
+#Options {
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-left: 25%;
+    padding-right: 25%;
+}
+
 .fill {
     height: 100%;
     width: 100%;
