--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
     Author     : Ryan Kenney
     Description:
         Main stylesheet
+        TODO LESS
 */
 
 root { 
@@ -90,13 +91,6 @@ body {
 
 #FilterLayer {
     background: rgba(128, 128, 128, 0.5);
-}
-
-#Options {
-    padding-top: 10%;
-    padding-bottom: 10%;
-    padding-left: 25%;
-    padding-right: 25%;
 }
 
 .fill {
